2015-04-10 00:06:01 +0200 tpg (Tomasz Paweł Gajc) 

	* use background from chroot theme for syslinux (HEAD, origin/master, origin/HEAD, master)

2015-04-07 14:59:24 +0400 Tomasz Paweł Gajc 

	* add vga=788

2015-04-03 11:39:05 +0400 Tomasz Paweł Gajc 

	* drop themes and networkmanager-applet

2015-04-01 22:49:49 +0200 tpg (Tomasz Paweł Gajc) 

	* add papyros-shell to weston

2015-03-28 11:16:59 +0100 tpg (Tomasz Paweł Gajc) 

	* force set default plymouth theme

2015-03-28 04:14:34 +0400 Tomasz Paweł Gajc 

	* strip all partitions to get a real device

2015-03-27 18:47:44 +0100 tpg (Tomasz Paweł Gajc) 

	* do not kill whole script

2015-03-24 23:00:04 +0100 tpg (Tomasz Paweł Gajc) 

	* use cantata for lxqt

2015-03-23 00:48:45 +0100 tpg (Tomasz Paweł Gajc) 

	* no need to update calamares settings

2015-03-23 00:46:03 +0100 tpg (Tomasz Paweł Gajc) 

	* comment out my last changes

2015-03-21 16:02:33 +0100 tpg (Tomasz Paweł Gajc) 

	* fix bug #1116 - mout device inside aufs, add --noclean option for ease dubigging

2015-03-18 01:27:01 +0100 tpg (Tomasz Paweł Gajc) 

	* add temporary workaround for LXQt session

2015-03-18 01:17:05 +0100 tpg (Tomasz Paweł Gajc) 

	* fix sddm config

2015-03-16 21:53:20 +0100 tpg (Tomasz Paweł Gajc) 

	* remove workarounds for broken x11 video drivers

2015-03-16 15:22:32 +0400 Tomasz Paweł Gajc 

	* remove gnu-efi as it is SDK

2015-03-05 19:15:27 +0100 tpg (Tomasz Paweł Gajc) 

	* try xz for liveinitrd

2015-03-05 14:29:18 +0400 Tomasz Paweł Gajc 

	* create /boot/grub2/grub.cfg from /EFI/grub.cfg

2015-03-05 13:22:44 +0400 Tomasz Paweł Gajc 

	* remove obex-data-server as it is not ready for bluez5

2015-03-05 13:22:25 +0400 Tomasz Paweł Gajc 

	* remove obex-data-server as it is not ready for bluez5

2015-03-05 13:15:05 +0400 Tomasz Paweł Gajc 

	* remove obex-data-server as it is not ready for bluez5

2015-03-04 20:26:56 +0100 tpg (Tomasz Paweł Gajc) 

	* add meteo-qt to lxqt

2015-03-04 20:03:06 +0100 tpg (Tomasz Paweł Gajc) 
